MATP-843 Add multi-instance support to clustering
git-svn-id: file:///space/source.marketcetera.org/root/branches/2.5.0-cluster@17028 501a4a96-914b-0410-8454-f5988a4ca596